# experiments_public

./: .gitignore  README.md  pyproject.toml
01_cascade_correlation/: DESIGN.md  README.md  model.py  train.py
02_tokenizer/: DESIGN.md  README.md  data.py  evaluate.py  tokenizer.py
02_tokenizer/experiments/: README.md  aggressive_growth.py  comparison_baseline.py  conservative_growth.py  minimal_test.py  pattern_exploration.py
03_residual/: README.md  baseline_model.py  config.py  evaluate.py  test_models.py  train.py
experiments/01_cascade_correlation/: data.py
experiments/02_tokenizer/: train.py
symbolfarm/design/_01_cascade_correlation/: DESIGN.md  config.py  model.py  train.py
symbolfarm/design/_02_tokenizer/experiments/: hybrid_strategy.py
symbolfarm/design/_03_residual/: model.py
symbolfarm/experiments/01_cascade_correlation/: config.py
symbolfarm/experiments/02_tokenizer/: config.py
symbolfarm/experiments/03_residual/: DESIGN.md  data.py
symbolfarm/module/: model.py
symbolfarm/monitor/: growth.py
symbolfarm/realm/: tiny_stories.py
